--- a/analisis_readmision_uci_hemorragia_intracerebral.ipynb
+++ b/analisis_readmision_uci_hemorragia_intracerebral.ipynb
@@ -20,14 +20,6 @@
       "metadata": {},
       "outputs": [
         {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/Users/marc/Library/Python/3.9/lib/python/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
-            "  warnings.warn(\n"
-          ]
-        },
-        {
           "name": "stdout",
           "output_type": "stream",
           "text": [
@@ -71,16 +63,7 @@
       "cell_type": "code",
       "execution_count": 34,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/Users/marc/Library/Python/3.9/lib/python/site-packages/google/cloud/bigquery/table.py:1933: UserWarning: BigQuery Storage module not found, fetch data with the REST endpoint instead.\n",
-            "  warnings.warn(\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "query = \"\"\"\n",
         "SELECT\n",
@@ -239,40 +222,8 @@
         "df['readmitted_stay'] = df['readmitted_stay'].fillna(0)\n",
         "\n",
         "# Scale features\n",
-        "# Inspect readmitted_stay\n",
-        "print(\"Nulls in readmitted_stay before fillna:\", df['readmitted_stay'].isnull().sum())\n",
-        "print(\"readmitted_stay summary:\", df['readmitted_stay'].describe())\n",
-        "\n",
-        "# Create readmitted (adjust based on readmitted_stay's meaning)\n",
-        "df['readmitted'] = df['readmitted_stay'].notnull().astype(int)  # Or (df['readmitted_stay'] > 0).astype(int)\n",
-        "\n",
-        "# Verify readmitted\n",
-        "print(\"Class distribution in readmitted:\", df['readmitted'].value_counts())\n",
-        "if len(df['readmitted'].unique()) < 2:\n",
-        "    raise ValueError(\"readmitted has only one class. Redefine the target.\")\n",
-        "\n",
-        "# Identify integer columns\n",
-        "int_columns = df.select_dtypes(include=['Int64', 'int64']).columns\n",
-        "\n",
-        "# Fill NaNs with rounded medians for integer columns\n",
-        "for col in int_columns:\n",
-        "    median_val = df[col].median()\n",
-        "    if not pd.isna(median_val):\n",
-        "        df[col] = df[col].fillna(int(median_val))\n",
-        "\n",
-        "# Fill NaNs for other numeric columns, excluding readmitted_stay\n",
-        "numeric_cols = df.select_dtypes(include='number').columns.difference(['readmitted_stay'])\n",
-        "df[numeric_cols] = df[numeric_cols].fillna(df[numeric_cols].median())\n",
-        "\n",
-        "# Handle readmitted_stay separately\n",
-        "df['readmitted_stay'] = df['readmitted_stay'].fillna(0)\n",
-        "\n",
-        "# Scale features\n",
         "\n",
         "scaler = StandardScaler()\n",
-        "# Select numeric columns, excluding readmitted_stay and readmitted\n",
-        "numeric_cols = df.select_dtypes(include='number').columns.difference(['readmitted_stay', 'readmitted'])\n",
-        "features_scaled = scaler.fit_transform(df[numeric_cols])"
         "# Select numeric columns, excluding readmitted_stay and readmitted\n",
         "numeric_cols = df.select_dtypes(include='number').columns.difference(['readmitted_stay', 'readmitted'])\n",
         "features_scaled = scaler.fit_transform(df[numeric_cols])"
@@ -390,7 +341,7 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "pycaret_gradio",
       "language": "python",
       "name": "python3"
     },
@@ -404,7 +355,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.6"
+      "version": "3.9.22"
     }
   },
   "nbformat": 4,
